--- a/src/index.css
+++ b/src/index.css
@@ -197,7 +197,6 @@ body{
   outline: 0;
   transition: background-color 0.15s ease;
 }
-
 .button:hover{
   background-color: #2d5d67;
   box-shadow: 0px 6px 12px 0 rgba(0, 0, 0, 0.12);
@@ -261,10 +260,10 @@ body{
 .bg-londan-square{
   background: #EBF0F1;
 }
-.light-grey{
+.color-grey{
   color: #808080;
 }
-.matt-black{
+.color-black{
   color: #262626;
 }
 
@@ -276,7 +275,6 @@ body{
   border-top-right-radius: 3px;
   border-top-left-radius: 3px;
 }
-
 .walking-coin{
   background-image: url("./assets/walking-coin.png");
   background-size: contain;
@@ -292,15 +290,12 @@ body{
   font-size: 16px;
   margin-bottom: 48px;
 }
-
 .key{
   color: #427783;
 }
-
 .string{
   color: #36b472;
 }
-
 .gradient{
   background-image: linear-gradient(180deg, rgba(249,250,253,0.00) 0%, #F9FAFD 57%,#F9FAFD 100%);
   height: 152px;
